--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Joystick
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,18 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">Joystick</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-item>
+    <ion-label >
+      CONNECT STATUS
+    </ion-label>
+    <ion-icon name="cellular-outline" slot="end" color="success" style="{{iconStyle1}}"></ion-icon>
+    <ion-icon name="cellular" slot="end" color="success" style="{{iconStyle2}}"></ion-icon>
+  </ion-item>
+  
+  <div id="zone_joystickL"></div>
+  <div id="zone_joystickR"></div>
+  <!-- <app-explore-container name="Joystick"></app-explore-container>-->
 </ion-content>
